<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/sensor_menu"
        app:showAsAction="always"
        android:enabled="false"
        android:title="@string/sensor_menu"/>

    <group android:checkableBehavior="single" >
        <item android:id="@+id/sensor_menu_100_msec"
            android:title="@string/sensor_menu_100_msec" />
        <item android:id="@+id/sensor_menu_1_second"
            android:title="@string/sensor_menu_1_second" />
        <item android:id="@+id/sensor_menu_5_seconds"
            android:title="@string/sensor_menu_5_seconds" />
        <item android:id="@+id/sensor_menu_1_minute"
            android:title="@string/sensor_menu_1_minute" />
        <item android:id="@+id/sensor_menu_10_minutes"
            android:title="@string/sensor_menu_10_minutes" />
    </group>

    <item
        android:title="@string/hr"
        android:enabled="false" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sensor_menu_run_always"
            app:showAsAction="always"
            android:title="@string/sensor_menu_run_always"/>
        <item
            android:id="@+id/sensor_menu_data_chg"
            app:showAsAction="always"
            android:checked="true"
            android:title="@string/sensor_menu_data_chg"/>
    </group>

</menu>