<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Dennis Lang (LanDen Labs) landenlabs@gmail.com
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction, including
  ~ without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the
  ~ following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial
  ~ portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
  ~ LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN
  ~ NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  ~ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~ @author Dennis Lang
  ~ @see https://LanDenLabs.com/
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@id/package_sort_by_appname"
            app:showAsAction="always"
            android:title="@string/package_menu_sort_by_appname" />

        <item
            android:id="@id/package_sort_by_pkgname"
            app:showAsAction="always"
            android:title="@string/package_menu_sort_by_pkgname" />

        <item
            android:id="@id/package_sort_by_size"
            app:showAsAction="always"
            android:title="@string/package_menu_sort_by_size" />

        <item
            android:id="@id/package_sort_by_update_date"
            app:showAsAction="always"
            android:title="@string/package_menu_sort_by_update_date" />

        <item
            android:id="@id/package_sort_by_install_date"
            app:showAsAction="always"
            android:title="@string/package_menu_sort_by_install_date" />
    </group>

    <item
        app:showAsAction="always"
        android:title=" " />

    <group android:checkableBehavior="single">
        <item
            android:id="@id/package_user"
            app:showAsAction="always"
            android:title="@string/package_menu_user" />
        <item
            android:id="@id/package_system"
            app:showAsAction="always"
            android:title="@string/package_menu_system" />
        <item
            android:id="@id/package_running"
            app:showAsAction="always"
            android:title="@string/package_menu_running" />
        <item
            android:id="@id/package_pref"
            app:showAsAction="always"
            android:title="@string/package_menu_pref" />
        <item
            android:id="@id/package_cache"
            app:showAsAction="always"
            android:title="@string/package_menu_cache" />
        <item
            android:id="@id/package_lib"
            app:showAsAction="always"
            android:title="@string/package_menu_lib" />
        <item
            android:id="@id/package_uninstall"
            app:showAsAction="always"
            android:title="@string/package_menu_uninstall" />
        <item
            android:id="@id/package_uncheck_all"
            app:showAsAction="always"
            android:title="@string/package_menu_uncheck_all" />
    </group>

    <item
        app:showAsAction="always"
        android:title=" " />

    <item
        android:checkable="true"
        android:checked="false"
        android:id="@id/package_uninstall_all"
        app:showAsAction="always"
        android:title="@string/package_menu_uninstall_all" />

    <item
        android:id="@id/package_collapseAll"
        app:showAsAction="always"
        android:title="@string/package_menu_collapseAll" />
    <item
        android:id="@id/package_expandAll"
        app:showAsAction="always"
        android:title="@string/package_menu_expandAll" />
</menu>