<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2026 Dennis Lang (LanDen Labs)
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction, including
  ~ without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the
  ~ following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial
  ~ portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
  ~ LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN
  ~ NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  ~ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~ @author Dennis Lang
  ~ @see https://LanDenLabs.com/
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_more"
        android:title="General"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/menu_web"
                android:icon="@drawable/web"
                android:title="@string/menu_web" />
            <item
                android:id="@+id/menu_share"
                android:icon="@drawable/share"
                android:title="@string/menu_share"
                 />

            <item android:title="" />
            <item
                android:id="@+id/menu_lock_orientation"
                android:checkable="true"
                android:checked="false"
                android:icon="@android:drawable/ic_lock_lock"
                android:title="Lock Orientation" />
            <item android:title="" />
            <item
                android:id="@+id/menu_shortcuts_on"
                android:icon="@drawable/dev_tool_ic"
                android:title="@string/menu_shortcuts_on" />
            <item
                android:id="@+id/menu_shortcuts_off"
                android:icon="@drawable/dev_tool_ic"
                android:title="@string/menu_shortcuts_off" />
        </menu>
    </item>

</menu>